--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -18,6 +18,9 @@ ja:
       user:
         one: "ユーザー"
         other: "ユーザー"
+      profile:
+        one: "プロフィール"
+        other: "プロフィール"
     attributes:
       user:
         email: "メールアドレス"
@@ -25,9 +28,18 @@ ja:
         password_confirmation: "パスワード（確認用）"
         remember_me: "ログインを記憶"
         name: "名前"
+      profile:
+        avatar: "プロフィール画像"
+        nickname: "ニックネーム"
+        description: "自己紹介"
     errors:
       messages:
         blank: "を入力してください"
         taken: "はすでに存在します"
         too_short: "は%{count}文字以上で入力してください"
         confirmation: "が一致しません"
+      models:
+        profile:
+          attributes:
+            avatar:
+              invalid_format: "はPNG形式のみ許可されています"
