エラーメッセージの修正

--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -21,6 +21,9 @@ ja:
       profile:
         one: "プロフィール"
         other: "プロフィール"
+      post:
+        one: "投稿"
+        other: "投稿"
     attributes:
       user:
         email: "メールアドレス"
@@ -32,6 +35,9 @@ ja:
         avatar: "プロフィール画像"
         nickname: "ニックネーム"
         description: "自己紹介"
+      post:
+        content: "投稿内容"
+        image: "画像"
     errors:
       messages:
         blank: "を入力してください"
@@ -43,3 +49,11 @@ ja:
           attributes:
             avatar:
               invalid_format: "はPNG形式のみ許可されています"
+        post:
+          attributes:
+            content:
+              blank: "を入力してください"
+              too_long: "は%{count}文字以内で入力してください"
+            image:
+              content_type: "はPNG形式のみ許可されています"
+              too_large: "のサイズは5MB以下にしてください"
